{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 323,
  "lineage": "ceaba710-fd13-3a1d-4c5c-30021a6b48aa",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mars_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/networkSecurityGroups/Mars_NSG",
            "location": "francecentral",
            "name": "Mars_NSG",
            "resource_group_name": "MarsCommand_RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-All-Outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "203.0.113.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "203.0.113.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mars_command_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/networkSecurityGroups/Mars_NSG/securityRules/Allow-All-Outbound",
            "name": "Allow-All-Outbound",
            "network_security_group_name": "Mars_NSG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "MarsCommand_RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mars_nsg",
            "azurerm_resource_group.mars_command_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/networkSecurityGroups/Mars_NSG/securityRules/Allow-RDP",
            "name": "Allow-RDP",
            "network_security_group_name": "Mars_NSG",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "MarsCommand_RG",
            "source_address_prefix": "203.0.113.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mars_nsg",
            "azurerm_resource_group.mars_command_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/networkSecurityGroups/Mars_NSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "Mars_NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "MarsCommand_RG",
            "source_address_prefix": "203.0.113.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mars_nsg",
            "azurerm_resource_group.mars_command_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mars_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/virtualNetworks/MarsComm_Network/subnets/Mars_PrivateSubnet",
            "name": "Mars_PrivateSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MarsCommand_RG",
            "virtual_network_name": "MarsComm_Network"
          },
          "dependencies": [
            "azurerm_resource_group.mars_command_rg",
            "azurerm_virtual_network.mars_comm_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mars_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/virtualNetworks/MarsComm_Network/subnets/Mars_PublicSubnet",
            "name": "Mars_PublicSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MarsCommand_RG",
            "virtual_network_name": "MarsComm_Network"
          },
          "dependencies": [
            "azurerm_resource_group.mars_command_rg",
            "azurerm_virtual_network.mars_comm_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mars_comm_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1c39e8a4-5ff4-4bee-a1a1-ae2aa8b01942",
            "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/virtualNetworks/MarsComm_Network",
            "location": "francecentral",
            "name": "MarsComm_Network",
            "resource_group_name": "MarsCommand_RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/virtualNetworks/MarsComm_Network/subnets/Mars_PublicSubnet",
                "name": "Mars_PublicSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.1.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ce61caf-883c-424a-868d-e94683afc99a/resourceGroups/MarsCommand_RG/providers/Microsoft.Network/virtualNetworks/MarsComm_Network/subnets/Mars_PrivateSubnet",
                "name": "Mars_PrivateSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.mars_command_rg"
          ]
        }
      ]
    }
  ]
}